# F11eSync

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
app/: Cargo.toml  build.rs
app/assets/: icon.icns  osx-info-plist-ext.xml
app/scripts/: build-linux-rust-cli.sh  build-macos-gui-apps.sh  build-windows-rust.ps1  generate-macos-icons.py
app/src/: config.rs  main.rs  proto.rs  settings.rs  update.rs  watcher.rs
app/src/app/: mod.rs
app/src/app/gui/: actions.rs  atom_api_doc.rs  atom_helper_config.rs  atom_helper_log.rs  atom_helper_path.rs  atoms.rs  commander.rs  data_officer.rs  diplomat.rs  mod.rs  molecules.rs  state.rs  styles.rs  view.rs
app/src/server/: atom_api_doc.rs  mod.rs
app/src/server/atoms/: atom_helper_filter.rs  atom_helper_limits.rs  atom_helper_messages.rs  mod.rs  socket_emit.rs  state.rs
app/src/server/molecules/: client_upload.rs  fs_broadcast.rs  mod.rs  shared_broadcast_entry.rs  socket_handlers.rs  sync_all.rs
script/: script.json
script/utils/: skinSync-service.ts
scripts/: generate-third-party-licenses.py  sync-rust-version.mjs
